[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "netbox-better-templates"
dynamic = ["version", "description", "readme", "authors", "keywords"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}


[tool.setuptools.dynamic]
version = {attr = "netbox_better_templates.__version__"}
description = {attr = "netbox_better_templates.__description__"}
authors = {attr = "netbox_better_templates.__authors__"}
keywords = {attr = "netbox_better_templates.__keywords__"}


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_better_templates*", "netbox_better_templates.*"]
exclude = ["test*", "dev*", "scripts*"]


[tool.setuptools.package-data]
netbox_better_templates = [
    "README.md",
    "LICENSE",
]


[tool.setuptools.exclude-package-data]
netbox_better_templates = [
    "__pycache__/*",
    "*.pyc",
    "*.so"
]


[project.urls]
Homepage = "https://github.com/devixa-tech/netbox-better-templates"
BugTracker = "https://github.com/devixa-tech/netbox-better-templates/issues"
